# graduate_work

./: Dockerfile  Dockerfile.migrate  Dockerfile.test  README.md  compose.yml  manage.py  pyproject.toml  wsgi.ini
graduate_work/: asgi.py  settings.py  urls.py  wsgi.py
tracker/: models.py  serializers.py  tests.py  views.py
tracker/migrations/: 0001_initial.py  0002_remove_task_completed_task_open.py
